<resources>
    <string name="app_name">Go Euro Test</string>
    <string name="search">Search</string>
    <string name="search_warning">Search is not yet implemented</string>
    <string name="action_settings">Settings</string>
    <string name="trip_date">Enter trip date</string>

    <string name="gps_off">For a better experience please enable your GPS</string>

    <string name="hint_start_location">Start location</string>
    <string name="hint_end_location">End location</string>
    <string name="hint_pick_trip_date">Pick trip date</string>
</resources>
