<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivityFragment">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:paddingBottom="40dp"
            android:paddingTop="40dp"
            android:src="@drawable/logo_go_euro" />

        <FrameLayout
            android:id="@+id/startLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_margin="@dimen/margin_default"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <com.goeuro.goeurotest.views.GoEuroAutoCompleteTextView
                android:id="@+id/start_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:hint="@string/hint_start_location"
                android:imeOptions="flagNoExtractUi|actionSearch"
                android:inputType="textCapSentences"
                android:padding="@dimen/padding_auto_complete"
                android:textColor="@color/fbutton_color_wet_asphalt" />

            <ProgressBar
                android:id="@+id/start_loading_indicator"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginRight="@dimen/margin_default"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/endLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/startLayout"
            android:layout_margin="@dimen/margin_default">

            <com.goeuro.goeurotest.views.GoEuroAutoCompleteTextView
                android:id="@+id/end_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:hint="@string/hint_end_location"
                android:imeOptions="flagNoExtractUi|actionSearch"
                android:inputType="textCapSentences"
                android:padding="@dimen/padding_auto_complete"
                android:textColor="@color/fbutton_color_wet_asphalt" />

            <ProgressBar
                android:id="@+id/end_loading_indicator"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginRight="@dimen/margin_default"
                android:paddingBottom="24dp"
                android:paddingTop="24dp"
                android:visibility="gone" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/endLayout"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dateTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/hint_pick_trip_date"
                android:inputType="datetime"
                android:textColor="@color/fbutton_color_wet_asphalt" />

            <ImageButton
                android:id="@+id/pick_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:src="@drawable/ic_action_pick_date"
                android:tint="@color/fbutton_color_wet_asphalt" />

        </LinearLayout>


        <info.hoang8f.widget.FButton
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/calendar_view"
            android:text="@string/search"
            android:textColor="@android:color/white"
            fbutton:buttonColor="@color/fbutton_color_wet_asphalt"
            fbutton:cornerRadius="5dp"
            fbutton:shadowColor="@color/fbutton_color_midnight_blue"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp" />

    </RelativeLayout>
</ScrollView>